Add a network test that plays through the human input path
The existing batch harness runs AI on both ends, so no human InputQueue exists
and the InputProxy and event dispatch paths never fire. Anything about thread
behaviour is invisible to it: one thread enters the delta walk across ten games,
against 43 in a two-player game here and 99 in a four-player Commander one.

Remote clients run in their own processes, because in-process clients share the
host's event dispatch thread and tempShowZones blocks it waiting for a reply
that needs the same thread to deliver it. AdviceServer lets a human-controlled
client ask the host's AI what it would play and act on the answer over the real
protocol, so the wire path stays exercised while the player stays human.

Each client compares what it finished holding against the server, which is the
question the checksum answers by sampling.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>